Mi segundo Commit
agregando otro parrafo en el index

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, obcaecati, fugit eos velit perspiciatis tenetur est eius provident eligendi ut unde iure temporibus quasi ea atque eveniet itaque nesciunt dolor.
     </p>
 
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, assumenda, quam, consequatur, ipsam quo adipisci quisquam quas mollitia quaerat sint placeat officia nam odio iusto est ducimus suscipit dolores dolor.
+
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate, fugit repellendus impedit. Eaque, accusantium, quidem quod velit veritatis sunt ex non autem quaerat accusamus nemo qui magni reprehenderit obcaecati fugit!
+
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, obcaecati, fugit eos velit perspiciatis tenetur est eius provident eligendi ut unde iure temporibus quasi ea atque eveniet itaque nesciunt dolor.
+    </p>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
