--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap 101 Template</title>
-
+    <title>Bootstrap 3 Template</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -17,23 +14,37 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <header>
+      <h1>Hola Mundo!</h1>
+    </header>
 
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, assumenda, quam, consequatur, ipsam quo adipisci quisquam quas mollitia quaerat sint placeat officia nam odio iusto est ducimus suscipit dolores dolor.
+    <nav>
+      <ul>
+        <li>Inicio</li>
+        <li>Acerca de mi</li>
+        <li>Portafolio</li>
+        <li>Contacto</li>
+      </ul>
+    </nav>
 
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate, fugit repellendus impedit. Eaque, accusantium, quidem quod velit veritatis sunt ex non autem quaerat accusamus nemo qui magni reprehenderit obcaecati fugit!
+    <section>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, assumenda, quam, consequatur, ipsam quo adipisci quisquam quas mollitia quaerat sint placeat officia nam odio iusto est ducimus suscipit dolores dolor.
+      </p>
 
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, obcaecati, fugit eos velit perspiciatis tenetur est eius provident eligendi ut unde iure temporibus quasi ea atque eveniet itaque nesciunt dolor.
-    </p>
+     <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, assumenda, quam, consequatur, ipsam quo adipisci quisquam quas mollitia quaerat sint placeat officia nam odio iusto est ducimus suscipit dolores dolor.
+      </p>
 
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, assumenda, quam, consequatur, ipsam quo adipisci quisquam quas mollitia quaerat sint placeat officia nam odio iusto est ducimus suscipit dolores dolor.
+       <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, assumenda, quam, consequatur, ipsam quo adipisci quisquam quas mollitia quaerat sint placeat officia nam odio iusto est ducimus suscipit dolores dolor.
+      </p>
+    </section>
 
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate, fugit repellendus impedit. Eaque, accusantium, quidem quod velit veritatis sunt ex non autem quaerat accusamus nemo qui magni reprehenderit obcaecati fugit!
+    <footer>
+      All DEsign Studio. Todos los Derechos Reservados.
+    </footer>
 
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, obcaecati, fugit eos velit perspiciatis tenetur est eius provident eligendi ut unde iure temporibus quasi ea atque eveniet itaque nesciunt dolor.
-    </p>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
