--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap 3 Template</title>
+    <link rel="stylesheet" href="css/estilos.css">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -20,10 +21,10 @@
 
     <nav>
       <ul>
-        <li>Inicio</li>
-        <li>Acerca de mi</li>
-        <li>Portafolio</li>
-        <li>Contacto</li>
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Acerca de mi</a></li>
+        <li><a href="#">Portafolio</a></li>
+        <li><a href="#">Contacto</a></li>
       </ul>
     </nav>
 
@@ -42,7 +43,17 @@
     </section>
 
     <footer>
-      All DEsign Studio. Todos los Derechos Reservados.
+
+      <h3>
+        <strong>
+          Powered by All Design Studio.
+        </strong>
+
+        <span>
+          Todos los Derechos Reservados.
+        </span>
+
+      </h3>
     </footer>
 
 
