cambios en el index
agregando mas parrafos

--- a/index.html
+++ b/index.html
@@ -31,12 +31,21 @@
     <section>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, assumenda, quam, consequatur, ipsam quo adipisci quisquam quas mollitia quaerat sint placeat officia nam odio iusto est ducimus suscipit dolores dolor.
-      </p>
-
-     <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, assumenda, quam, consequatur, ipsam quo adipisci quisquam quas mollitia quaerat sint placeat officia nam odio iusto est ducimus suscipit dolores dolor.
       </p>
-
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, assumenda, quam, consequatur, ipsam quo adipisci quisquam quas mollitia quaerat sint placeat officia nam odio iusto est ducimus suscipit dolores dolor.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, assumenda, quam, consequatur, ipsam quo adipisci quisquam quas mollitia quaerat sint placeat officia nam odio iusto est ducimus suscipit dolores dolor.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, assumenda, quam, consequatur, ipsam quo adipisci quisquam quas mollitia quaerat sint placeat officia nam odio iusto est ducimus suscipit dolores dolor.
+      </p>
+       <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, assumenda, quam, consequatur, ipsam quo adipisci quisquam quas mollitia quaerat sint placeat officia nam odio iusto est ducimus suscipit dolores dolor.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, assumenda, quam, consequatur, ipsam quo adipisci quisquam quas mollitia quaerat sint placeat officia nam odio iusto est ducimus suscipit dolores dolor.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, assumenda, quam, consequatur, ipsam quo adipisci quisquam quas mollitia quaerat sint placeat officia nam odio iusto est ducimus suscipit dolores dolor.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, assumenda, quam, consequatur, ipsam quo adipisci quisquam quas mollitia quaerat sint placeat officia nam odio iusto est ducimus suscipit dolores dolor.
+      </p>
        <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, assumenda, quam, consequatur, ipsam quo adipisci quisquam quas mollitia quaerat sint placeat officia nam odio iusto est ducimus suscipit dolores dolor.
       </p>
