--- a/index.html
+++ b/index.html
@@ -28,7 +28,32 @@
       </ul>
     </nav>
 
-    <section>
+    <section id="seccion1">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, assumenda, quam, consequatur, ipsam quo adipisci quisquam quas mollitia quaerat sint placeat officia nam odio iusto est ducimus suscipit dolores dolor.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, assumenda, quam, consequatur, ipsam quo adipisci quisquam quas mollitia quaerat sint placeat officia nam odio iusto est ducimus suscipit dolores dolor.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, assumenda, quam, consequatur, ipsam quo adipisci quisquam quas mollitia quaerat sint placeat officia nam odio iusto est ducimus suscipit dolores dolor.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, assumenda, quam, consequatur, ipsam quo adipisci quisquam quas mollitia quaerat sint placeat officia nam odio iusto est ducimus suscipit dolores dolor.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, assumenda, quam, consequatur, ipsam quo adipisci quisquam quas mollitia quaerat sint placeat officia nam odio iusto est ducimus suscipit dolores dolor.
+      </p>
+       <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, assumenda, quam, consequatur, ipsam quo adipisci quisquam quas mollitia quaerat sint placeat officia nam odio iusto est ducimus suscipit dolores dolor.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, assumenda, quam, consequatur, ipsam quo adipisci quisquam quas mollitia quaerat sint placeat officia nam odio iusto est ducimus suscipit dolores dolor.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, assumenda, quam, consequatur, ipsam quo adipisci quisquam quas mollitia quaerat sint placeat officia nam odio iusto est ducimus suscipit dolores dolor.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, assumenda, quam, consequatur, ipsam quo adipisci quisquam quas mollitia quaerat sint placeat officia nam odio iusto est ducimus suscipit dolores dolor.
+      </p>
+       <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, assumenda, quam, consequatur, ipsam quo adipisci quisquam quas mollitia quaerat sint placeat officia nam odio iusto est ducimus suscipit dolores dolor.
+      </p>
+    </section>
+    
+    <h2>Esta es una segunda Seccion</h2>
+    
+    <section id="seccion2">
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, assumenda, quam, consequatur, ipsam quo adipisci quisquam quas mollitia quaerat sint placeat officia nam odio iusto est ducimus suscipit dolores dolor.
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, assumenda, quam, consequatur, ipsam quo adipisci quisquam quas mollitia quaerat sint placeat officia nam odio iusto est ducimus suscipit dolores dolor.
