--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Bootstrap 3 Template</title>
     <link rel="stylesheet" href="css/estilos.css">
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!--<link href="css/bootstrap.min.css" rel="stylesheet"> -->
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -52,7 +52,7 @@
     </section>
     
     <h2>Esta es una segunda Seccion</h2>
-    
+
     <section id="seccion2">
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, assumenda, quam, consequatur, ipsam quo adipisci quisquam quas mollitia quaerat sint placeat officia nam odio iusto est ducimus suscipit dolores dolor.
